Fixed Accessibility (Button Contrast)

--- a/src/app/searchform/searchform.component.css
+++ b/src/app/searchform/searchform.component.css
@@ -46,7 +46,7 @@ mat-form-field {
 }
 
 .blue-button {
-    background-color: #4FC3F7;
+    background-color: #0095fe;
     color: white;
     float: right;
     min-width: 80%;
