--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: rgb(34, 151, 206);
+    background-color: #0095fe;
     /*background: rgb(26, 141, 194) url("https://source.unsplash.com/1920x1080/?nature") no-repeat center center fixed;*/
     background-size: cover;
 }
